<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <!-- Animación Lottie -->
    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:lottie_fileName="login.json"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        android:layout_marginTop="40dp" />

    <!-- Título -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_de_acceso"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp" />

    <!-- Formulario en ScrollView -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fillViewport="true"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Usuario -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/usuario"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Contraseña -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/edPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/contrasenia"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- ¿Olvidaste tu contraseña? -->
            <TextView
                android:id="@+id/tvOlvidasteTuContrasena"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/olvidaste_tu_contrase_a"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:layout_gravity="end" />

            <!-- Botón Ingresar -->
            <Button
                android:id="@+id/btnIngresar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/ingresar"
                android:layout_marginTop="20dp" />

            <!-- ¿No tienes cuenta? Regístrate -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_tienes_cuenta"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/registrate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reg_strate"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <!-- Botones sociales -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:weightSum="2">

                <Button
                    android:id="@+id/google"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:layout_marginEnd="8dp"
                    android:text="Google"
                    android:textColor="@color/black"
                    android:backgroundTint="@color/white"
                    app:drawableLeftCompat="@drawable/ic_google" />

                <Button
                    android:id="@+id/facebook"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:text="Facebook"
                    android:textColor="@color/black"
                    android:backgroundTint="@color/white"
                    app:drawableLeftCompat="@drawable/ic_google" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
